<resources>
    <string name="app_name">Archaeological Fieldwork</string>

    <string name="title_activity_login">Sign up/Login to Sites</string>
    <string name="title_all_sites">All Sites</string>
    <string name="title_show_site">Show Site</string>
    <string name="title_activity_add_or_edit_site_view">Edit Site</string>
    <string name="title_edit_location">Edit Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_site_map">Map of all sites</string>

    <string name="hint_siteTitle">Site title</string>
    <string name="hint_siteDescription">Site description</string>
    <string name="hint_siteVisitedDate">Visit date</string>
    <string name="image_Description">Image description</string>

    <string name="message_enter_site_title">Please Enter Site Title</string>
    <string name="message_site_set_favorite">Added to favorite</string>
    <string name="message_site_unset_favorite">Removed from favorite</string>

    <string name="action_settings">Settings</string>
    <string name="action_map_of_sites">Map of all sites</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_favorite">Set Favorite</string>
    <string name="action_navigate">Navigate to Site</string>

    <string name="select_image">Select site image</string>
    <string name="visit_date_text">Visited on: %1$s</string>
    <string name="not_visited_text">Not visited yet</string>
    <string name="visited_text">Visited</string>
    <string name="location_text">Location: (lat %1$s, lng %2$s)</string>

    <string name="button_text_add_image">Add Image</string>
    <string name="button_text_add_notes">Add Notes</string>
    <string name="button_text_add_location">Add Location</string>
    <string name="button_text_change_location">Change Location</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign up / Login</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
