<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_favorite"
          android:title="@string/action_favorite"
          android:icon="@drawable/ic_bookmark_border_black_24dp"
          app:showAsAction="always"/>

    <item android:id="@+id/menu_navigate"
          android:title="@string/action_navigate"
          android:icon="@drawable/ic_navigation_black_24dp"
          app:showAsAction="always"/>

    <item android:id="@+id/menu_delete"
          android:title="@string/action_delete"
          android:icon="@drawable/ic_delete_black_24dp"
          app:showAsAction="always"/>

    <item android:id="@+id/menu_edit"
          android:title="@string/action_edit"
          android:icon="@drawable/ic_edit_black_24dp"
          app:showAsAction="always"/>
</menu>
