<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_show_site"
            tools:context=".views.site.SiteView">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:id="@+id/site_visited_checkbox_show"
                android:clickable="false"
                app:layout_constraintTop_toTopOf="@+id/site_title_show"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/site_title_show"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:text="@string/hint_siteTitle"
                android:textStyle="bold"
                android:textSize="30sp" android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/site_visited_checkbox_show"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/site_visit_date_show"
                  android:text="@string/visit_date_text"
                  android:textAlignment="viewStart"
                  android:textSize="12sp"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/site_title_show"
                  app:layout_constraintHorizontal_bias="0.0"
                  android:textColor="@android:color/darker_gray"
                  app:layout_constraintStart_toStartOf="@+id/site_title_show"
                  app:layout_constraintEnd_toEndOf="@+id/site_visited_checkbox_show"/>

        <TextView android:text="@string/location_text"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/location_info_text_show"
                  android:layout_marginTop="8dp"
                  android:textSize="12sp"
                  android:textColor="@android:color/darker_gray"
                  android:visibility="gone"
                  app:layout_constraintTop_toBottomOf="@+id/site_visit_date_show"
                  app:layout_constraintStart_toStartOf="@+id/site_title_show"
                  app:layout_constraintEnd_toEndOf="@+id/site_visited_checkbox_show"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/site_description_show"
                  android:text="@string/hint_siteDescription"
                  android:textAlignment="viewStart" android:textSize="14sp"
                  android:layout_marginTop="16dp"
                  app:layout_constraintTop_toBottomOf="@+id/location_info_text_show"
                  app:layout_constraintEnd_toEndOf="@+id/site_visited_checkbox_show"
                  app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintStart_toStartOf="@+id/site_title_show"/>

        <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="64dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/site_description_show"
                app:layout_constraintStart_toStartOf="@+id/site_description_show"
                android:id="@+id/horizontalScrollView" app:layout_constraintEnd_toEndOf="@+id/site_description_show"
        >

            <LinearLayout android:id="@+id/site_image_gallery_show"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <ImageView android:layout_width="0dp"
                           android:layout_height="match_parent" tools:srcCompat="@tools:sample/backgrounds/scenic"
                           android:id="@+id/imageView" android:layout_weight="1" android:visibility="invisible"/>
            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>